--- a/PERFUMERIA/servicio.html
+++ b/PERFUMERIA/servicio.html
@@ -116,7 +116,7 @@
                             <div class="position-relative text-center bg-light rounded p-4 pb-5" style="margin-top: -75px;">
                                 <h5 class="font-weight-semi-bold mt-5 mb-3 pt-5">Quality Maintain</h5>
                                 <p>Dolor nonumy sed eos sed lorem diam amet eos magna. Dolor kasd lorem duo stet kasd justo</p>
-                                <a href="" class="border-bottom border-secondary text-decoration-none text-secondary">Learn More</a>
+                                <a href="" class="border-bottom border-secondary text-decoration-none text-secondary">Comprar</a>
                             </div>
                         </div>
                         <div class="service-item">
@@ -126,7 +126,7 @@
                             <div class="position-relative text-center bg-light rounded p-4 pb-5" style="margin-top: -75px;">
                                 <h5 class="font-weight-semi-bold mt-5 mb-3 pt-5">Individual Approach</h5>
                                 <p>Dolor nonumy sed eos sed lorem diam amet eos magna. Dolor kasd lorem duo stet kasd justo</p>
-                                <a href="" class="border-bottom border-secondary text-decoration-none text-secondary">Learn More</a>
+                                <a href="" class="border-bottom border-secondary text-decoration-none text-secondary">Comprar</a>
                             </div>
                         </div>
                         <div class="service-item">
@@ -136,7 +136,7 @@
                             <div class="position-relative text-center bg-light rounded p-4 pb-5" style="margin-top: -75px;">
                                 <h5 class="font-weight-semi-bold mt-5 mb-3 pt-5">Celebration Ice Cream</h5>
                                 <p>Dolor nonumy sed eos sed lorem diam amet eos magna. Dolor kasd lorem duo stet kasd justo</p>
-                                <a href="" class="border-bottom border-secondary text-decoration-none text-secondary">Learn More</a>
+                                <a href="" class="border-bottom border-secondary text-decoration-none text-secondary">Comprar</a>
                             </div>
                         </div>
                         <div class="service-item">
@@ -146,7 +146,7 @@
                             <div class="position-relative text-center bg-light rounded p-4 pb-5" style="margin-top: -75px;">
                                 <h5 class="font-weight-semi-bold mt-5 mb-3 pt-5">Delivery To Any Point</h5>
                                 <p>Dolor nonumy sed eos sed lorem diam amet eos magna. Dolor kasd lorem duo stet kasd justo</p>
-                                <a href="" class="border-bottom border-secondary text-decoration-none text-secondary">Learn More</a>
+                                <a href="" class="border-bottom border-secondary text-decoration-none text-secondary">Comprar</a>
                             </div>
                         </div>
                     </div>
