--- a/PERFUMERIA/contacto.html
+++ b/PERFUMERIA/contacto.html
@@ -9,7 +9,7 @@
     <meta content="Free HTML Templates" name="description">
 
     <!-- Favicon -->
-    <link href="img/2.png" rel="icon">
+    <link href="img/logo fin.jpg" rel="icon">
 
     <!-- Google Web Fonts -->
     <link rel="preconnect" href="https://fonts.gstatic.com">
@@ -156,7 +156,7 @@
                                 
 
                             </p>
-                            <p class="mb-0">+573005124807</p>
+                            <p class="mb-0">+573173631103</p>
                         </div>
                         <div class="col-sm-6 text-center text-sm-left">
                             <h5 class="font-weight-bold mb-2">Horario de Atencion</h5>
