--- a/PERFUMERIA/nosotros.html
+++ b/PERFUMERIA/nosotros.html
@@ -8,8 +8,11 @@
     <meta content="Free HTML Templates" name="keywords">
     <meta content="Free HTML Templates" name="description">
 
+
+
+
     <!-- Favicon -->
-    <link href="img/2.png" rel="icon">
+    <link href="img/logo fin.jpg" rel="icon">
 
     <!-- Google Web Fonts -->
     <link rel="preconnect" href="https://fonts.gstatic.com">
