--- a/PERFUMERIA/producto.html
+++ b/PERFUMERIA/producto.html
@@ -9,7 +9,7 @@
     <meta content="Free HTML Templates" name="description">
 
     <!-- Favicon -->
-    <link href="img/2.png" rel="icon">
+    <link href="img/logo fin.jpg" rel="icon">
 
     <!-- Google Web Fonts -->
     <link rel="preconnect" href="https://fonts.gstatic.com">
@@ -193,8 +193,8 @@
         </div>
         <div class="col-lg-4 col-md-6 p-0 portfolio-item">
             <div class="position-relative overflow-hidden">
-                <img class="img-fluid w-100" src="img/Screenshot_20220719-100131_Facebook.jpg" alt="">
-                <a class="portfolio-btn" href="img/Screenshot_20220719-100131_Facebook.jpg" data-lightbox="portfolio">
+                <img class="img-fluid w-100" src="img/producto (3).jpg" alt="">
+                <a class="portfolio-btn" href="img/producto (3).jpg" data-lightbox="portfolio">
                     <i class="fa fa-plus text-primary" style="font-size: 60px;"></i>
                 </a>
             </div>
@@ -226,7 +226,7 @@
                         <div class="col-sm-6 text-center text-sm-right border-right mb-3 mb-sm-0">
                             <h5 class="font-weight-bold mb-2">Direccion</h5>
                             <p class="mb-2">Cr 50 n 5704 bello ant</p>
-                            <p class="mb-0">+573005124807</p>
+                            <p class="mb-0">+573173631103</p>
                         </div>
                         <div class="col-sm-6 text-center text-sm-left">
                             <h5 class="font-weight-bold mb-2">Horario de Atencion</h5>
